# homebrew-clang-cross

./: .gitignore  Readme.md  aarch64-alpine-linux-musl.rb  armv6-alpine-linux-musl.rb  armv7-alpine-linux-musl.rb  cmake-build-test.sh  extract-sysroot-from-docker.sh  i686-w64-windows-gnu.rb  meson-build-test.sh  x86_64-alpine-linux-musl.rb  x86_64-w64-windows-gnu.rb
example/: win-zlib-openssl-boost.sh
test/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  meson.build
